# sansaisummit26

./: .gitmodules  CHEATSHEET.md  LOCALSETUP.md  README.md  WORKSHOP-OUTLINE.md  WORKSHOP-TIMELINE.md  links.md  pyproject.toml
.devcontainer/: devcontainer.json  install-dependencies.sh
notebooks/solution/: 2-transform-dataset.ipynb  3-generate-embeddings.ipynb  4-cluster-data.ipynb  5-visualizing-clusters.ipynb  6-llm-risk-analysis.ipynb  7-similarity-sorting.ipynb  8-rag.ipynb  etl.py
notebooks/solution/outfiles-with-embeddings/google/: _06_unique_clustered_commands_with_risk.csv
notebooks/solution/outfiles-with-embeddings/ollama/: _02_evtx_commands.parquet
notebooks/solution/outfiles-with-embeddings/openai/: _06_unique_clustered_commands_with_risk.csv
notebooks/student/: 1-download-dataset.ipynb  2-transform-dataset.ipynb  3-generate-embeddings.ipynb  4-cluster-data.ipynb  5-visualizing-clusters.ipynb  6-llm-risk-analysis.ipynb  7-similarity-sorting.ipynb  8-rag.ipynb
