[project]
name = "sansaisummit26"
version = "0.1.0"
description = "Workshop repository for SANS AI Summit 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evtx>=0.11.0",
    "jmespath>=1.1.0",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "ujson>=5.12.0",
    "ipykernel>=7.2.0",
    "pyarrow>=23.0.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "nbformat>=5.10.4",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
]
